--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "private": true,
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.0.20",
+    "@clerk/nextjs": "^5.2.8",
+    "@clerk/themes": "^2.1.14",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
@@ -16,6 +19,7 @@
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookie-parser": "^1.4.6",
     "lucide-react": "^0.416.0",
     "next": "14.2.3",
     "react": "18.3.1",
@@ -69,6 +73,7 @@
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.5.2",
+    "@types/cookie-parser": "^1.4.7",
     "webpack-cli": "^5.1.4"
   }
 }
