--- a/nx.json
+++ b/nx.json
@@ -44,7 +44,8 @@
         "serveTargetName": "serve",
         "previewTargetName": "preview"
       }
-    }
+    },
+    "@monodon/rust"
   ],
   "generators": {
     "@nx/next": {
