--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,4 +4,7 @@ services:
     build: './apps/video'
     ports:
       - "1935:1935"
+      - "8080:8080"
     container_name: rtmp_server
+    volumes:
+      - ./dist/data:/tmp/hls
