--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "@nestjs/platform-express": "^10.0.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "@vidstack/react": "^1.11.30",
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cookie-parser": "^1.4.6",
+    "hls.js": "^1.5.14",
     "lucide-react": "^0.416.0",
     "next": "14.2.3",
     "react": "18.3.1",
