feat(streaming): syncing HLS data with S3 for using CLoudfront cdn

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
+AWS_REGION=<Example: ap-south-1>
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_S3_BUCKET=
+AWS_CLOUDFRONT_DOMAIN=<Example: bucket_name.s3.region.amazonaws.com>
