--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "scripts": {
     "dev:web": "npx nx run web:dev",
     "dev:backend": "npx nx serve backend",
-    "dev:watcher": "npx nx run dirS3Sync:serve",
-    "dev": "concurrently \"npm run dev:web\" \"npm run dev:backend\" \"npm run dev:watcher\"",
+    "dev": "concurrently \"npm run dev:web\" \"npm run dev:backend\"",
     "docker": "docker-compose up --build"
   },
   "private": true,
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.629.0",
     "@clerk/clerk-sdk-node": "^5.0.20",
     "@clerk/nextjs": "^5.2.8",
     "@clerk/themes": "^2.1.14",
